# configflow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conda.environment.yaml  pyproject.toml  tox.ini
.github/: FUNDING.yml  status.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/config/: slack.yaml
.github/workflows/: codeql-analysis.yml  codeql.yaml  dependabot.yaml  deployment.yaml  integration.yaml  integration.yml  publish.yaml
_docs/_static/assets/: components.puml
docs/: conf.py  index.rst  installation.rst  requirements.txt  requirements.txt 
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: io.rst  misc.rst  misc.string.rst
docs/modules/: installation.rst
src/configflow/: __init__.py  configflow.py
src/configflow/exceptions/: __init__.py  io.py  metaclass.py  misc.py  providers.py  sources.py
src/configflow/io/: __init__.py  dotenv.py  enums.py  ini.py  loader.py
src/configflow/misc/: __init__.py  decorators.py  dictionary.py  string.py
src/configflow/providers/: __init__.py  dotenv.py  factory.py  loader.py  properties.py  toml.py  yaml.py
src/configflow/sources/: __init__.py  abstract.py  file.py
src/configflow/types/: __init__.py  dictionary.py  error.py
tests/fixtures/: example.env  example.ini  example.json  example.properties  example.toml  example.yaml
tests/io/: conftest.py  test_dotenv.py  test_ini.py
tests/modules/io/: conftest.py  test_loader.py
tests/modules/misc/: test_dictionary.py  test_string.py
tests/modules/providers/: test_factory.py  test_loader.py
tests/modules/sources/: conftest.py  test_file.py
tests/types/: test_dictionary.py
